# viland

./: .gitignore  Cargo.toml  README.md  RUST_SPEC.md  RUST_TODO.md  SPEC.md  TODO.md  install.sh  pyproject.toml
config/: config.toml.example  hyprland-viland.conf  keyd-viland.conf  viland.toml  viland.yaml
scripts/: viland.sh
src/: device.rs  device.rs_header  errors.rs  event.rs  keymap.rs  main.rs  state.rs  uinput.rs
src/viland/: config.py  daemon.py  filter.py  input_handler.py  key_mapper.py  state_machine.py  tray.py
src/viland.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
