[package]
name = "viland"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Minimal modal keyboard daemon for Wayland"

[dependencies]
libc = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1.19"
rustix = { version = "0.38", features = ["fs"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true